# recode-quality-detector

./: .gitignore  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md
src/: ffmpeg.rs  main.rs
