[package]
name = "rqd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
comfy-table = "7.1.4"
eyre = "0.6.12"
promkit = { version = "0.9.1", features = ["checkbox", "listbox"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
winnow = { version = "0.7.9", features = ["std"] }
